# pension_portfolio_optimiser

./: .gitignore  FINAL_STATUS_REPORT.md  TESTING_REPORT.md  requirements.txt
nps_ups/: __init__.py  optimiser.py  optimiser_fixed.py  reporting.py
nps_ups_portfolio_optimization/: .gitignore  Makefile  README.md  SETUP_GUIDE.md  TESTING_SUMMARY.txt  pyproject.toml  requirements.txt  setup.py
nps_ups_portfolio_optimization/.github/workflows/: ci.yml
nps_ups_portfolio_optimization/nps_ups/: __init__.py  __main__.py  analytics.py  cli.py  optimiser.py  reporting.py  simulation.py
nps_ups_portfolio_optimization/nps_ups/io/: __init__.py  data_loader.py  economic_data.py
nps_ups_portfolio_optimization/tests/: __init__.py  test_core_functionality.py
