[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nps-ups-portfolio-optimization"
version = "1.0.0"
description = "Comprehensive portfolio optimization comparing India's NPS vs UPS pension schemes"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Quantitative Research Team", email = "quant.research@example.com"}
]
keywords = [
    "finance", "portfolio-optimization", "pension", "nps", "ups", 
    "quantitative-finance", "risk-management", "monte-carlo",
    "efficient-frontier", "pypfopt", "india"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "PyPortfolioOpt>=1.5.5",
    "cvxpy>=1.3.0",
    "yfinance>=0.2.18",
    "statsmodels>=0.14.0",
    "scikit-learn>=1.3.0",
    "torch>=2.0.0",
    "pytorch-lightning>=2.0.0",
    "matplotlib>=3.7.0",
    "plotly>=5.15.0",
    "seaborn>=0.12.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "pandas-datareader>=0.10.0",
    "fredapi>=0.5.0",
    "click>=8.1.0",
    "tqdm>=4.65.0",
    "python-dotenv>=1.0.0",
    "jupyter>=1.0.0",
    "nbconvert>=7.7.0",
    "jinja2>=3.1.0",
    "weasyprint>=59.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.0.287",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.2.0",
    "mkdocstrings[python]>=0.22.0",
]

[project.scripts]
nps-ups = "nps_ups.cli:cli"

[project.urls]
Homepage = "https://github.com/username/nps-ups-portfolio-optimization"
Repository = "https://github.com/username/nps-ups-portfolio-optimization"
Documentation = "https://username.github.io/nps-ups-portfolio-optimization"
"Bug Tracker" = "https://github.com/username/nps-ups-portfolio-optimization/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["nps_ups*"]

[tool.setuptools.package-data]
nps_ups = ["templates/*.html", "data/*.csv"]

# Black configuration
[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# Ruff configuration
[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["B011"]

[tool.ruff.isort]
known-first-party = ["nps_ups"]

# MyPy configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "numpy.*",
    "scipy.*",
    "sklearn.*",
    "statsmodels.*",
    "plotly.*",
    "matplotlib.*",
    "seaborn.*",
    "yfinance.*",
    "pypfopt.*",
    "cvxpy.*",
    "torch.*",
    "pytorch_lightning.*",
    "weasyprint.*",
    "beautifulsoup4.*",
    "fredapi.*",
    "pandas_datareader.*"
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=nps_ups",
    "--cov-branch",
    "--cov-report=term-missing",
    "--cov-fail-under=80"
]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["nps_ups"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
] 